# speckle-sharp

./: .csharpierrc.yaml  .editorconfig  .gitguardian.yml  .gitignore  .gitmodules  All-v3.sln  All.sln  All.sln.DotSettings  App.config  App.xaml  App.xaml.cs  Bootstrapper.cs  CodeMetricsConfig.txt  ConnectorBindings.cs  ConnectorGrashopper.sln  ConnectorGrasshopper.sln  ConnectorRevit.sln  Core.sln  DUI3-CNX-8893.slnf  DUI3-DX-REVIT.slnf  DUI3-DX-RHINO.slnf  DUI3-DX.slnf  DUI3.sln  DUI3.slnf  DesktopUI.csproj  DesktopUI.sln  Directory.Build.Props  Directory.Build.Targets  Directory.Build.props  Directory.Build.targets  GitVersion.yml  MainWindow.xaml  MainWindow.xaml.cs  MainWindowViewModel.cs  Objects.sln  README.md  RootView.xaml  RootView.xaml.cs  RootViewModel.cs  SDK.slnf  (+16 more)
.circleci/: config.yml  continuation-config-v2.yml  old-config.yml
.config/: dotnet-tools.json
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
.husky/: task-runner.json
.solution-filters/: SDK.slnf
Accounts/: AccountModel.cs  AccountsRepository.cs  AccountsView.xaml  AccountsView.xaml.cs  AccountsViewModel.cs  AddAccountView.xaml  AddAccountView.xaml.cs  AddAccountViewModel.cs
AddOn/: CMakeLists.txt  README.md
Analytics/: Program.cs
BatchUploadOperationDriver/: BatchUploadOperationDriver.cs  BatchUploadOperationDriver.csproj
CSiConnectorConverterShared/: CSiConnectorConverterShared.csproj
ConnectorArcGIS/: Config.daml  ConnectorArcGIS.csproj  ConnectorArcGIS.sln  SpeckleDUI3.xaml  SpeckleDUI3.xaml.cs  SpeckleDUI3ViewModel.cs  SpeckleModule.cs  app.config
ConnectorArchicad/: .gitignore  ConnectorArchicad.sln  ConnectorArchicad.slnf  LICENSE  README.md
ConnectorArchicad/AddOn/: .editorconfig  CMakeLists.txt
ConnectorArchicad/AddOn/Sources/: .editorconfig
ConnectorArchicad/AddOn/Sources/AddOn/: APIEnvir.h  APIMigrationHelper.hpp  AddOnMain.cpp  AttributeManager.cpp  AttributeManager.hpp  ClassificationImportManager.cpp  ClassificationImportManager.hpp  Database.cpp  Database.hpp  ExchangeManager.cpp  ExchangeManager.hpp  FieldNames.hpp  LibpartImportManager.cpp  LibpartImportManager.hpp  PropertyExportManager.cpp  PropertyExportManager.hpp  ResourceIds.hpp  ResourceStrings.cpp  ResourceStrings.hpp  TypeNameTables.cpp  TypeNameTables.hpp  Utility.cpp  Utility.hpp
ConnectorArchicad/AddOn/Sources/AddOn/Commands/: BaseCommand.cpp  BaseCommand.hpp  CommandHelpers.hpp  CreateBeam.cpp  CreateBeam.hpp  CreateColumn.cpp  CreateColumn.hpp  CreateCommand.cpp  CreateCommand.hpp  CreateCommandHelpers.hpp  CreateDirectShape.cpp  CreateDirectShape.hpp  CreateDoor.cpp  CreateDoor.hpp  CreateGridElement.cpp  CreateGridElement.hpp  CreateObject.cpp  CreateObject.hpp  CreateOpening.cpp  CreateOpening.hpp  CreateOpeningBase.cpp  CreateOpeningBase.hpp  CreateRoof.cpp  CreateRoof.hpp  CreateShell.cpp  CreateShell.hpp  CreateSkylight.cpp  CreateSkylight.hpp  CreateSlab.cpp  CreateSlab.hpp  CreateWall.cpp  CreateWall.hpp  CreateWindow.cpp  CreateWindow.hpp  CreateZone.cpp  CreateZone.hpp  FinishReceiveTransaction.cpp  FinishReceiveTransaction.hpp  GetBeamData.cpp  GetBeamData.hpp  (+47 more)
ConnectorArchicad/AddOn/Sources/AddOn/Objects/: Level.cpp  Level.hpp  ModelInfo.cpp  ModelInfo.hpp  Point.cpp  Point.hpp  Polyline.cpp  Polyline.hpp  Vector.cpp  Vector.hpp
ConnectorArchicad/AddOn/Sources/AddOnResources/RFIX/: AddOnFix.grc
ConnectorArchicad/AddOn/Sources/AddOnResources/RFIX.mac/: Info.plist
ConnectorArchicad/AddOn/Sources/AddOnResources/RINT/: AddOn.grc
ConnectorArchicad/AddOn/Sources/AddOnResources/Tools/: CompileResources.py
ConnectorAutoCAD/: ConnectorAutoCAD.sln
ConnectorAutocadCivil/: ConnectorAdvanceSteel.slnf  ConnectorAutocadCivil.sln  ConnectorAutocadCivil.slnf  README.md
ConnectorBentley/: ConnectorBentley.sln  ConnectorBentley.slnf  README.md
ConnectorCSI/: ConnectorCSI.sln  ConnectorCSI.slnf
ConnectorDynamo/: .gitignore  ConnectorDynamo.sln  ConnectorDynamo.slnf  README.md
ConnectorETABS/: ConnectorETABS.sln  README.md
ConnectorGSA/: ConnectorGSA.sln
ConnectorGrashopper/: ConnectorGrashopper.csproj  ConnectorGrashopperInfo.cs  SpeckleObject.cs
ConnectorGrasshopper/: .gitignore  ConnectorGrasshopper.csproj  ConnectorGrasshopper.sln  ConnectorGrasshopperInfo.cs  README.md  packages.config
ConnectorMicroStation/: ConnectorMicroStation.sln  README.md
ConnectorNavisworks/: ConnectorNavisworks.sln  ConnectorNavisworks.slnf  README.md
ConnectorRevit/: ConnectorRevit.csproj  ConnectorRevit.sln  ConnectorRevit.slnf  ConnectorRevitTests.slnf  ExternalEventHandler.cs  README.md
ConnectorRhino/: ConnectorBindingsRhino.cs  ConnectorRhino.csproj  ConnectorRhino.sln  ConnectorRhino.slnf  ConnectorRhinoCommand.cs  README.md  packages.config
ConnectorRhino8/: ConnectorRhino8.csproj
ConnectorTeklaStructures/: ConnectorTeklaStructures.sln  ConnectorTeklaStructures.slnf  Exclude.txt  Manifest.xml
Core/: .csharpierrc  .gitignore  .gitmodules  Core.csproj  Core.sln  README.md  docker-compose.yml  toxiproxy.json
DUI3-DX/: Directory.Build.Props  Directory.Build.props  Directory.Packages.props
DesktopUI/: .editorconfig  Bootstrapper.cs  ConnectorBindings.cs  DesktopUI.csproj  README.md  RootView.xaml  RootView.xaml.cs  RootViewModel.cs  packages.config
DesktopUI2/: DesktopUI2.sln  README.md
DiskTransport/: DiskTransport.cs  DiskTransport.csproj
Examples/: ExampleApp.csproj  Program.cs  Subscriptions.cs
Feed/: FeedView.xaml  FeedView.xaml.cs  FeedViewModel.cs
GhFiles/: AsyncIntegrationTest.ghx  CreateSpeckleObjectTests-WithGeometry.ghx  ExpandObjectTest.ghx  ExpandObjectTestCables.ghx  ExtendObjectTest.ghx  KeyValueTest.ghx  StreamsTest.ghx
HttpTests/: ConsoleSketches.csproj  HttpTests.csproj  Program.cs
Inbox/: InboxView.xaml  InboxView.xaml.cs  InboxViewModel.cs
Installer/: speckle-v2-installer-all.iss  speckle-v2-installer-bentley.iss  speckle-v2-installer-gsa.iss  speckle-v2-installer-rhinogh.iss
IntegrationTests/: Api.cs  Fixtures.cs  IntegrationTests.sln  RemoteOps.cs  TestsIntegration.csproj  Utils.cs
MongoDBTransport/: MongoDB.cs  (+1 more)
(+6030 files in other folders)
